cabal-version: 3.0
name: melodeer-hs
version: 8.10

executable melodeer-hs
    main-is: Main.hs
    other-modules: MDSem, MDBuff
    build-depends:
        base >= 4.8,
        flac >= 0.2.0,
        OpenAL >= 1.7,
        containers >= 0.6,
        transformers >= 0.5,
        mtl >= 2.2,
        directory >= 1.3,
        text >= 1.2,
        process >= 1.6
